vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity__tests__parse_entity_with_ports.snap
---
source: vhdl_syntax/src/parser/productions/entity.rs
expression: "to_test_text(Parser::entity,\n\"\\\nentity my_ent is\n    port();\nbegin\nend my_ent;\n\",)"
---
EntityDeclaration
  Keyword(Entity)
  Identifier 'my_ent'
  Keyword(Is)
  EntityHeader
    PortClause
      Keyword(Port)
      LeftPar
      RightPar
      SemiColon
  Keyword(Begin)
  Keyword(End)
  Identifier 'my_ent'
  SemiColon
