vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity__tests__parse_simple_entity.snap
---
source: vhdl_syntax/src/parser/productions/entity.rs
expression: "to_test_text(Parser::entity, \"\\\nentity my_ent is\nbegin\nend my_ent;\n\",)"
---
EntityDeclaration
  Keyword(Entity)
  Identifier 'my_ent'
  Keyword(Is)
  EntityHeader
  Keyword(Begin)
  Keyword(End)
  Identifier 'my_ent'
  SemiColon
